--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.3.24",
+    "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^11.3.24",
-    "lucide-react": "^0.427.0"
+    "react-quill": "^2.0.0",
+    "recharts": "^3.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
